@@ -1,0 +1,5 @@
+LIBQOF_0.7.3 {
+	global:
+		*;
+};
+
