@@ -1,3 +1,10 @@
+2008-01-02  Neil Williams  <linux@codehelp.co.uk>
+
+ * configure.in,
+ qof/Makefile.am,
+ qof/libqof.ver : Implement baseline symbol
+ versioning support, prior to libqof2.
+
 2007-12-24  Neil Williams  <linux@codehelp.co.uk>
 
 	* configure.in,
